--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-gdnative = "0.5.0"
-
+gdnative = { path = "./gdnative_clone/gdnative" }
 
 [lib]
 # Since GDNative can only use C-compatible dynamic libraries, the crate type
